--- a/src/main/resources/static/css/plugins/picklocation.css
+++ b/src/main/resources/static/css/plugins/picklocation.css
@@ -25,7 +25,16 @@ padding-bottom: unset;
         cursor: pointer;
         margin-bottom: 22px;
         text-align: center;
+        outline: none;
     }
+
+         #pick-location:active{
+color:white!important;
+    }
+             #pick-location:hover{
+color:white!important;
+    }
+    
     .pick-location{
         color:white;
         font-size: 12px;
@@ -53,3 +62,4 @@ padding-bottom: unset;
 infoBox.img{
 display: none!important;
 }
+
