--- a/src/main/resources/static/css/plugins/view-field.css
+++ b/src/main/resources/static/css/plugins/view-field.css
@@ -1,7 +1,18 @@
+#dLabel{
+	background-color: white!important;
 
-
-
+	color:#545454!important;
+	border: 1px solid #898989;
+}
+#dropdown_action{
+    border: 0px solid rgba(0,0,0,.15) !important;
+    margin: 0px 0px 0px !important;
+    min-width: 95px !important;
+    border-radius: 5px;
+    text-align: left!important;
+}
  #md12 .col-lg-12{
+}
 font-family: Roboto;
 }
 
