--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layout">
+    <html xmlns="http://www.w3.org/1999/xhtml" 
+    xmlns:th="http://www.thymeleaf.org" 
+    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<head>
 	<meta charset="UTF-8"/>
 	<title>Login</title>
 	</head>
-	
+	  <link rel="stylesheet" th:href="@{/css/plugins/login.css}" />
+        <link rel="stylesheet" th:href="@{/css/plugins/bs.css}" />
 	<body>
-		<div layout:fragment="content">
-			<div class="container">
-					<div th:if="${param.error}" class="alert alert-danger" role="alert">
-						<span>Incorrect username or password</span>
-					</div>
-					<div th:if="${param.logout}">
-            			You have been logged out.
-			        </div>
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						Log In
-					</div>
-					<div class="panel-body">
-						<form th:method="post" th:action="@{/login}">
-							<div class="form-group">
-								<label for="username">Username</label>
-								<input type="text" id="username" name="username" class="form-control"/>
-							</div>
-							<div class="form-group">
-								<label for="password">Password</label>
-								<input type="password" id="password" name="password" class="form-control"/>
-							</div>
-							<button type="submit" class="btn btn-primary">Log In</button>
-						</form>
-					</div>
-				</div>
-			</div>
+
+			<div layout:fragment="content">	
+    <div id="wrapper">
+
+<div class="container">
+    <div class="card card-container">
+        <img id="logo-img" class="logo-img" src="img/availaball.png" />
+        <form th:method="post" th:action="@{/login}" class="form-signin">
+            <label class="lable-color">Email</label>
+            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Ketik Email" required autofocus>
+            <label class="lable-color">Password</label>
+            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Ketik Password" required>
+            <button class="btn btn-lg btn-primary btn-block btn-signin" id="button-login" type="submit">Login</button>
+        </form><!-- /form -->
+        
+    </div>
+</div>        
+        
+    </div>
+				
+		
 		</div>
+
 	</body>
 </html>
