--- a/src/main/resources/templates/admin/page/edit-field.html
+++ b/src/main/resources/templates/admin/page/edit-field.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" th:href="@{/css/plugins/edit-field.css}" />
     <link rel="stylesheet" th:href="@{/css/fonts/icon-edit/style.css}" />
      <script th:src="@{/js/edit-field.js}"></script>
+       <script th:src="@{/js/date.min.js}"></script>
+   
 </head>
 
 <body>
@@ -162,41 +164,41 @@
 											<div class="entry" style="float:left;     padding-left: 23px;" id="entry">
 										
 												<select class="time" id="start_senin" disabled="disabled">
-													<option value="a">08.00</option>
-													<option value="b">09.00</option>
-													<option value="c">10.00</option>
-													<option value="d">11.00</option>
-													<option value="e">12.00</option>
-													<option value="f">13.00</option>
-													<option value="g">14.00</option>
-													<option value="h">15.00</option>
-													<option value="i">16.00</option>
-													<option value="j">17.00</option>
-													<option value="k">18.00</option>
-													<option value="l">19.00</option>
-													<option value="m">20.00</option>
-													<option value="n">21.00</option>
-													<option value="o">22.00</option>
-													<option value="p">23.00</option>
-													<option value="q">24.00</option>
+													<option value="08.00">08.00</option>
+													<option value="09.00">09.00</option>
+													<option value="10.00">10.00</option>
+													<option value="11.00">11.00</option>
+													<option value="12.00">12.00</option>
+													<option value="13.00">13.00</option>
+													<option value="14.00">14.00</option>
+													<option value="15.00">15.00</option>
+													<option value="16.00">16.00</option>
+													<option value="17.00">17.00</option>
+													<option value="18.00">18.00</option>
+													<option value="19.00">19.00</option>
+													<option value="20.00">20.00</option>
+													<option value="21.00">21.00</option>
+													<option value="22.00">22.00</option>
+													<option value="23.00">23.00</option>
+													<option value="24.00">24.00</option>
 												</select> <select class="timed" id="end_senin" disabled="disabled">
-													<option value="a">24.00</option>
-													<option value="b">23.00</option>
-													<option value="c">22.00</option>
-													<option value="d">21.00</option>
-													<option value="e">20.00</option>
-													<option value="f">19.00</option>
-													<option value="g">18.00</option>
-													<option value="h">17.00</option>
-													<option value="i">16.00</option>
-													<option value="j">15.00</option>
-													<option value="k">14.00</option>
-													<option value="l">13.00</option>
-													<option value="m">12.00</option>
-													<option value="n">11.00</option>
-													<option value="o">10.00</option>
-													<option value="p">09.00</option>
-													<option value="q">08.00</option>
+													<option value="08.00">08.00</option>
+													<option value="09.00">09.00</option>
+													<option value="10.00">10.00</option>
+													<option value="11.00">11.00</option>
+													<option value="12.00">12.00</option>
+													<option value="13.00">13.00</option>
+													<option value="14.00">14.00</option>
+													<option value="15.00">15.00</option>
+													<option value="16.00">16.00</option>
+													<option value="17.00">17.00</option>
+													<option value="18.00">18.00</option>
+													<option value="19.00">19.00</option>
+													<option value="20.00">20.00</option>
+													<option value="21.00">21.00</option>
+													<option value="22.00">22.00</option>
+													<option value="23.00">23.00</option>
+													<option value="24.00">24.00</option>
 												</select>
 												<div class=" input-group " style="float:right">
 														<label class="rp" > Rp </label>
