--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" th:href="@{/css/plugins/bs.css}" />
 	<body>
 
-			<div layout:fragment="content">	
+	<div layout:fragment="content">	
     <div id="wrapper">
 
 <div class="container">
@@ -19,10 +19,13 @@
         <img id="logo-img" class="logo-img" src="img/availaball.png" />
         <form th:method="post" th:action="@{/login}" class="form-signin">
             <label class="lable-color">Email</label>
-            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Ketik Email" required autofocus>
+            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Ketik email" required autofocus>
             <label class="lable-color">Password</label>
-            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Ketik Password" required>
+            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Ketik password" required>
             <button class="btn btn-lg btn-primary btn-block btn-signin" id="button-login" type="submit">Login</button>
+            <div th:if="${param.error}">
+                        <div class="alert alert-danger" id="error-alert"><i class=" fa-exclamation-circle"></i>Email dan password tidak cocok</div>
+                    </div>
         </form><!-- /form -->
         
     </div>
