--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,8 +7,9 @@
 	<meta charset="UTF-8"/>
 	<title>Login</title>
 	</head>
-	  <link rel="stylesheet" th:href="@{/css/plugins/login.css}" />
-        <link rel="stylesheet" th:href="@{/css/plugins/bs.css}" />
+	<link rel="stylesheet" th:href="@{/css/plugins/login.css}" />
+    <link rel="stylesheet" th:href="@{/css/plugins/bs.css}" />
+    <link rel="stylesheet" th:href="@{/css/fonts/icon-error/style.css}" />
 	<body>
 
 	<div layout:fragment="content">	
@@ -19,13 +20,14 @@
         <img id="logo-img" class="logo-img" src="img/availaball.png" />
         <form th:method="post" th:action="@{/login}" class="form-signin">
             <label class="lable-color">Email</label>
-            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Ketik email" required autofocus>
+            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Ketik email" required autofocus onfocusout="delete()" >
             <label class="lable-color">Password</label>
-            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Ketik password" required>
+            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Ketik password" required >
             <button class="btn btn-lg btn-primary btn-block btn-signin" id="button-login" type="submit">Login</button>
             <div th:if="${param.error}">
-                        <div class="alert alert-danger" id="error-alert"><i class=" fa-exclamation-circle"></i>Email dan password tidak cocok</div>
-                    </div>
+            <div class="alert alert-danger" id="error-alert"><i class="icon_error" style="padding-right: 10px;"> </i>Email dan password tidak cocok</div>
+             </div>
+      
         </form><!-- /form -->
         
     </div>
