--- a/src/main/resources/templates/admin/page/edit-field.html
+++ b/src/main/resources/templates/admin/page/edit-field.html
@@ -16,6 +16,7 @@
 
                 <!-- Page Heading -->
 						<div class="row">
+						<div id="map" ></div>
                     <div  class="col-lg-12" id="font">
                         
                         <!-- Title -->
@@ -66,8 +67,8 @@
                                   <!-- Map icon -->
                         <div class="col-lg-4 map2 lefted" id="map" style="margin-top: -9px;padding-right: unset;" >
                            <label class="label-color lefted"> -6.19152212312</label>
-                           <a th:href="@{/admin/picklocation}">
-                           <img src="/img/map.jpg" class="map-icons" onclick="removeHidden()">
+                           <a href="#map">
+                           <img src="/img/map.jpg" class="map-icons" id="iconn" data-geocode="36.885387,-76.306421">
                            </a>
                            
 
@@ -620,6 +621,68 @@
 			
         </div>
         <!-- /#page-wrapper -->
+
+<script type="text/javascript">
+	$(document).ready(function() {
+	// var test = $('#map-container').hasClass('mapit');
+	var test = window.google != undefined;
+
+	$('.map-icons').click(function() {
+		console.log("Map is clicked");
+		$gmap = true;
+		$mapit = false;
+		
+		yepnope({  
+		    test : test,
+		    yep: {
+		    	"alreadyLoaded":"timeout=1!"
+		    },
+		    nope: {
+		    	"googleMap": "https://maps.google.com/maps/api/js?v=3&sensor=true&callback=initMap"
+		    },
+		    callback: {
+		    	"alreadyLoaded": function() {
+		    		console.log("Already Loaded");
+		    		initMap();
+		    	}
+		    },			
+			complete : function(url, result, key){
+				console.log("Complete");
+		    }
+		});
+		console.log("I should run before YepNope");
+	});
+
+});
+
+function initMap() {
+	$("#map").show();
+    console.log("Type Of Google: " + typeof google);
+    var geocodeString = $("#map").data("geocode");
+	var geocode = geocodeString.split(',');
+	var myLatlng = new google.maps.LatLng(parseFloat(geocode[0]), parseFloat(geocode[1]));
+
+	var myOptions = {
+	    zoom: 18,
+	    center: myLatlng,
+	    mapTypeControl: true,
+	    mapTypeControlOptions: {style: google.maps.MapTypeControlStyle.DROPDOWN_MENU},
+	    navigationControl: true,
+	    mapTypeId: google.maps.MapTypeId.ROADMAP,
+	}
+
+	var map = new google.maps.Map(document.getElementById("#iconn"), myOptions);
+	var marker = new google.maps.Marker({
+	    position: myLatlng
+	  
+	});
+
+	// To add the marker to the map, call setMap();
+	marker.setMap(map);
+}
+
+
+</script>
 
 </body>
 
