--- a/src/main/resources/templates/admin/page/map.html
+++ b/src/main/resources/templates/admin/page/map.html
@@ -19,7 +19,7 @@
 .form-box {
 	position: absolute;
 	top: 0;
-	height: 100%;
+	height: 700px;
 	width: 30%;
 	right: 0;
 	background-color: rgba(255, 255, 255, 0.8);
@@ -100,7 +100,7 @@
 						</div>
 						<div class="col-lg-12"></div>
 					</div>
-					<img class="pam" src="/img/app_icon.png" />
+		
 
 					<script>
 						function initMap() {
@@ -108,8 +108,8 @@
 									.getElementById('map'), {
 								zoom : 10,
 								center : {
-									lat : -6.300,
-									lng : 106.805
+									lat : -6.1864674,
+									lng : 106.82963719999998
 								}
 							});
 							setMarkers(map);
@@ -129,7 +129,7 @@
 										-6.246799299999999, 106.91970630000003,
 										4 ],
 								[
-										'JJl. Danau Sunter Barat, Blok A4 No. 8-10, Jakarta Utara',
+										'Jl. Danau Sunter Barat, Blok A4 No. 8-10, Jakarta Utara',
 										-6.1421, 106.85725400000001, 5 ],
 								[
 										'Jl. Raya Serpong Km 7, Kompleks Multi Guna Blok B2 No. 8, Tangerang',
@@ -141,7 +141,7 @@
 								
 							//	url : 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',
 								
-								size : new google.maps.Size(50, 50),
+								size : new google.maps.Size(50, 56),
 								//20, 32
 								origin : new google.maps.Point(0, 0),
 								anchor : new google.maps.Point(0, 50)
