--- a/src/main/resources/templates/admin/page/map.html
+++ b/src/main/resources/templates/admin/page/map.html
@@ -3,28 +3,35 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Map</title>
+<link rel="stylesheet" th:href="@{/css/plugins/view-field.css}" />
+
 <style>
 #map {
-	height: 700px;
-	width: 120%;
+	height: 640px;
+	width: 100%;
 	position: static;
 	z-index: 0;
 }
 
+#page-wrapper {
+    padding: 5px !important;
+    padding-left: 71px !important;
+} 
 .map-box {
-	height: 700px;
+	height: 640px;
+	width: 100%;
 	position: relative;
 }
 
 .form-box {
 	position: absolute;
 	top: 0;
-	height: 700px;
+	height: 650px;
 	width: 30%;
-	right: 0;
+	right: 0px;
 	background-color: rgba(255, 255, 255, 0.8);
 	z-index: 10;
-	padding-top: 50px;
+	padding-top: 0px;
 }
 </style>
 </head>
@@ -34,82 +41,128 @@
 			<div class="map-box">
 				<div id="map"></div>
 				<div class="form-box collapse">
-					<div class="row">
-						<div id="md12" class="col-lg-12">
-							<div id="" class="col-lg-12">
-								<!-- last update -->
-								<div class="col-md-2 mdtop1">
-									<div>
-										<label class="labels"> Latest update </label>
-									</div>
-									<div>
-										<label class="text"> 05/04/2017 15:03 </label>
-									</div>
+			
+				<div class="row">
+					<div id="md12" class="col-lg-12">
+
+						<div id="" class="col-lg-12">
+							<!-- last update -->
+							<div class="col-md-2 mdtop1">
+								<div>
+									<label class="labels"> Latest update </label>
 								</div>
-								<div class="col-md-2 mdtop1">
-									<div>
-										<label class="labels"> Surveyer </label>
-									</div>
-									<div></div>
+								<div>
+									<label class="text"> 05/04/2017 15:03 </label>
 								</div>
+
 							</div>
-							<div class="col-md-6 mdtop6">
-								<img src="/img/aa.jpg" height="150" width="280">
+							<!-- end of last update -->
+
+
+							<!-- Surveyer name-->
+							<div class="col-md-2 mdtop1">
+								<div>
+									<label class="labels"> Surveyer </label>
+								</div>
+								<!-- <div>
+									<label class="text"> <span
+										th:text="${view.fieldName}"></span>
+									</label>
+								</div> -->
 							</div>
-							<!--end of field img-->
-							<div class="col-lg-12">
-								<!-- detail -->
-								<div class="col-md-6 mdtop2 "></div>
-								<div class="col-lg-12 mdtop3">
-									<!-- phone number -->
-									<div class="col-md-2 mdtop4">
-										<div>
-											<label class="labels">Telepon </label>
-										</div>
-									</div>
-									<!-- end of phone number-->
-									<!-- number of field -->
-									<div class="col-md-3 mdtop4">
-										<div>
-											<label class="labels">Jumlah Lapangan</label>
-										</div>
-									</div>
-									<!-- end of number of field -->
-								</div>
-								<!-- jam buka -->
-								<div class="col-md-12 mdtop5">
-									<div>
-										<label class="labels">Jam Buka</label>
-									</div>
-									<div>
-										<label class="texts">Senin-Sabtu</label>
-									</div>
-									<div>
-										<label class="textes">08:00-20:00</label>
-									</div>
-								</div>
-								<!-- end of jam buka-->
-								<!-- harga-->
-								<div class="col-md-12 mdtop5">
-									<div>
-										<label class="labels">Harga Normal Per Jam</label>
-									</div>
-								</div>
-								<!-- end of harga-->
+							<!-- end of surveyer name-->
+							<div class="col-md-6 mdtop1" style="padding-right: unset;">
+							<div class="dropdown" style="float: right; right:0;" >
+						            <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-primary" data-target="#" href="/page.html">
+						               <i class="icon-gear"></i> Action <span class="caret"></span>
+						            </a>
+						    		<ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="dropdown_action" >
+						              <li><a th:href="@{/admin/edit-field/10}">Edit</a></li>
+						              <li><a href="#" onclick="centerModal(10)">Delete</a></li>
+	       
+						            </ul>
+						        </div>								
 							</div>
 						</div>
-						<div class="col-lg-12"></div>
-					</div>
-		
+						<!-- Field img -->
+						<div class="col-md-6 mdtop6">
+							<img src="/img/aa.jpg" height="150" width="280">
+						</div>
+						<!--end of field img-->
+						<div class="col-lg-12">
+							<!-- detail -->
+							<div class="col-md-6 mdtop2 ">
+								<!-- <div>
+									<label class="titles"><span th:text="${view.fieldName}"></span></label>
+								</div> -->
+								<!-- <div class="labels">
+									<span th:text="${view.location}"></span>
+								</div> -->
+							</div>
+							<!-- end of detail-->
+							<div class="col-lg-12 mdtop3">
+								<!-- phone number -->
+								<div class="col-md-2 mdtop4">
+									<div>
+										<label class="labels">Telepon </label>
+									</div>
+									<!-- <div>
+										<span th:text="${phone}"></span>
+									</div> -->
+								</div>
+								<!-- end of phone number-->
 
+								<!-- number of field -->
+								<div class="col-md-3 mdtop4">
+
+									<div>
+										<label class="labels">Jumlah Lapangan</label>
+									</div>
+									<!-- <div>
+										<span th:text="${view.numberOfField}"></span>
+									</div> -->
+								</div>
+								<!-- end of number of field -->
+							</div>
+
+							<!-- jam buka -->
+							<div class="col-md-12 mdtop5">
+								<div>
+									<label class="labels">Jam Buka</label>
+								</div>
+								<div>
+									<label class="texts">Senin-Sabtu</label>
+								</div>
+								<div>
+									<label class="textes">08:00-20:00</label>
+								</div>
+							</div>
+							<!-- end of jam buka-->
+							<!-- harga-->
+							<div class="col-md-12 mdtop5">
+								<div>
+									<label class="labels">Harga Normal Per Jam</label>
+								</div>
+								<!-- <div class="textes">
+									<span th:text="${view.price}"></span>
+								</div> -->
+
+							</div>
+							<!-- end of harga-->
+						</div>
+					</div>
+					<div class="col-lg-12"></div>
+				</div>
+		
 					<script>
 						function initMap() {
 							var map = new google.maps.Map(document
 									.getElementById('map'), {
-								zoom : 10,
+								zoom : 13,
+								disableDefaultUI: true,
 								center : {
-									lat : -6.1864674,
-									lng : 106.82963719999998
+									lat : -6.197180299999999,
+									lng : 106.84686999999997
 								}
 							});
 							setMarkers(map);
@@ -133,18 +186,19 @@
 										-6.1421, 106.85725400000001, 5 ],
 								[
 										'Jl. Raya Serpong Km 7, Kompleks Multi Guna Blok B2 No. 8, Tangerang',
-										-6.212711, 106.68357609999998, 6 ] ];
+										-6.212711, 106.68357609999998, 6 ],
+								['Jl. Mangga Besar XI No.2, Tangki, Tamansari, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11170', -6.148039000000001,106.82568800000001, 7 ],
+								['RSCM, Kenari, Central Jakarta City, Jakarta, Indonesia', -6.197180299999999, 106.84686999999997, 8],
+								['Futsal Monas', -6.174511, 106.82896089999997, 9],
+								['Universitas Negeri Jakarta', -6.1946737, 106.87822979999999, 10]
+								];
 						
 						function setMarkers(map) {
 							var image = {
 								url : 'https://image.ibb.co/dznXH5/pointer.png',
 								
-								//url : 'https://image.ibb.co/kytxH5/selected_map.png',
-								
-							// Base-->	url : 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',
-								
+								//url : 'https://image.ibb.co/kytxH5/selected_map.png',	
 								size : new google.maps.Size(50, 56),
-								//20, 32
 								origin : new google.maps.Point(0, 0),
 								anchor : new google.maps.Point(0, 50)
 							};
@@ -172,6 +226,9 @@
 											$(".form-box").removeClass("collapse");
 											$(this).addClass("collapse");
 										});
+								
+								
+								
 								/*	google.maps.event.addListener(marker,'click', function() {
 										map.setCenter(this.getPosition());
 										$(".form-box").addClass("collapse");	
@@ -194,6 +251,7 @@
 					<script async defer
 						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDByR5Y8ovC_QFWCQnHcdGYGYzqLZfZ1ew&callback=initMap">
     </script>
+    <script src="/js/futsalfield.js"></script>
 				</div>
 			</div>
 		</div>
